fixed menu scrolling issue.  works in ie.  Bottom container is no longer page height, looks better on tablet

--- a/styles/main.css
+++ b/styles/main.css
@@ -179,7 +179,7 @@ p {
 
 
 #contact {
-	min-height: calc(100vh - 80px);
+	margin-bottom: 50px;
 }
 
 input:focus, textarea:focus {
